mutation/Images/difference/775/upload.txt
Microservice listening on http://localhost:3000/preview
{NumberQuestions:false}
{NumberQuestions:true}
/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:682
        throw invalidChar(read())
        ^

SyntaxError: JSON5: invalid character 'u' at 2:1
    at syntaxError (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:1083:17)
    at invalidChar (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:1028:12)
    at Object.end (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:682:15)
    at Object.default (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:146:37)
    at lex (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:78:42)
    at Object.parse (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:25:17)
    at ProcessTokens (/home/ubuntu/checkbox.io-micro-preview/marqdown.js:203:34)
    at Object.exports.render (/home/ubuntu/checkbox.io-micro-preview/marqdown.js:21:21)
    at /home/ubuntu/checkbox.io-micro-preview/index.js:23:29
    at FSReqCallback.readFileAfterClose [as oncomplete] (internal/fs/read_file_context.js:63:3) {
  lineNumber: 2,
  columnNumber: 1
}
